--- a/src/app/components/sections/profile/profile.component.html
+++ b/src/app/components/sections/profile/profile.component.html
@@ -72,13 +72,27 @@
               <span *ngIf="isDeleting" class="spinner-border spinner-border-sm me-1"></span>
               Delete
             </button>
-            <button type="button" class="btn btn-outline-info btn-sm" (click)="linkFacebook()"
-              [disabled]="isLinkingFacebook">
+            <button 
+              type="button" 
+              *ngIf="showLinkFacebook"
+              class="btn btn-outline-secondary btn-sm me-2" 
+              (click)="linkFacebook()"
+              [disabled]="isLinkingFacebook || isFacebookLinked">
               <img
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/32px-Facebook_f_logo_%282019%29.svg.png"
                 alt="Facebook" width="20" height="20" class="me-2" *ngIf="!isLinkingFacebook">
               <span *ngIf="isLinkingFacebook" class="spinner-border spinner-border-sm me-1"></span>
-              Link Facebook Account
+              {{ isLinkingFacebook ? 'Linking...' : (isFacebookLinked ? 'Facebook Linked' : 'Link Facebook Account') }}
+            </button>
+            <button 
+              type="button"
+              *ngIf="showLinkGoogle"
+              class="btn btn-outline-secondary btn-sm" 
+              (click)="linkGoogle()" 
+              [disabled]="isLinkingGoogle || isGoogleLinked">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_%22G%22_logo.svg" alt="Google" width="20" height="20" class="me-2" *ngIf="!isLinkingGoogle">
+              <span *ngIf="isLinkingGoogle" class="spinner-border spinner-border-sm me-1"></span>
+              {{ isLinkingGoogle ? 'Linking...' : (isGoogleLinked ? 'Google Linked' : 'Link Google Account') }}
             </button>
           </div>
           <input #fileInput type="file" (change)="onFileSelected($event)" accept="image/*" style="display: none;">
@@ -130,11 +144,11 @@
     </div>
 
     <!-- Linked Providers Section -->
-    <div class="mb-3">
+    <div class="mb-3" *ngIf="showLinkGoogle || showLinkFacebook" >
       <h6 class="fw-bold">Linked Accounts</h6>
       <div *ngIf="linkedProviders.length > 0; else noProviders">
-        <span *ngFor="let provider of linkedProviders" class="badge bg-secondary me-2">
-          {{ getProviderDisplayName(provider) }}
+        <span *ngFor="let provider of linkedProviders" class="badge bg-secondary me-2"
+          [innerHTML]="getProviderDisplayName(provider)">
         </span>
       </div>
       <ng-template #noProviders>
