--- a/src/app/components/sections/profile/profile.component.html
+++ b/src/app/components/sections/profile/profile.component.html
@@ -147,7 +147,7 @@
     <div class="mb-3" *ngIf="showLinkGoogle || showLinkFacebook" >
       <h6 class="fw-bold">Linked Accounts</h6>
       <div *ngIf="linkedProviders.length > 0; else noProviders">
-        <span *ngFor="let provider of linkedProviders" class="badge bg-secondary me-2"
+        <span *ngFor="let provider of linkedProviders" class="badge bg-light me-2"
           [innerHTML]="getProviderDisplayName(provider)">
         </span>
       </div>
